--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,31 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^3.2.2",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.3",
+    "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-jester": "^2.3.2",
+    "tailwindcss": "^3.4.13",
+    "ts-jest": "^29.1.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.3.0",
-    "@testing-library/svelte": "^3.2.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "svelte-jester": "^2.3.2",
-    "babel-jest": "^29.5.0",
-    "@babel/preset-env": "^7.21.5",
-    "@types/jest": "^29.5.1",
-    "ts-jest": "^29.1.0",
-    "@types/node": "^18.16.3"
+    "vitest": "^2.1.2"
   },
   "type": "module",
   "dependencies": {
     "@jest/globals": "^29.5.0",
-    "livekit-client": "^1.7.0"
+    "livekit-client": "^1.15.13"
   }
 }
