--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
 # Copy the rest of the application code
 COPY . .
@@ -21,12 +21,13 @@ FROM node:16-alpine
 WORKDIR /app
 
 # Copy built assets from the build stage
-COPY --from=build /app/build ./build
 COPY --from=build /app/package.json .
+COPY --from=build /app/package-lock.json .
+COPY --from=build /app/.svelte-kit ./.svelte-kit
 COPY --from=build /app/node_modules ./node_modules
 
 # Expose the port the app runs on
 EXPOSE 3081
 
 # Start the application
-CMD ["node", "build"]
+CMD ["node", ".svelte-kit/output/server/index.js"]
