--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,35 +8,33 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write .",
+    "start": "node .svelte-kit/output/server/index.js"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.21.5",
     "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.5.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/svelte": "^3.2.2",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^18.16.3",
-    "autoprefixer": "^10.4.20",
-    "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
-    "svelte-jester": "^2.3.2",
-    "tailwindcss": "^3.4.13",
-    "ts-jest": "^29.1.0",
+    "@sveltejs/kit": "^1.20.4",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte": "^2.30.0",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.10.1",
+    "svelte": "^4.0.5",
+    "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0",
-    "vitest": "^2.1.2"
+    "vite": "^4.4.2",
+    "vitest": "^0.34.0",
+    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16",
+    "@tailwindcss/typography": "^0.5.10"
   },
   "type": "module",
   "dependencies": {
-    "@jest/globals": "^29.5.0",
-    "livekit-client": "^1.15.13"
+    "livekit-client": "^1.13.2"
   }
 }
