--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,8 +8,9 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true
-  },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "tests/**/*.ts", "custom-types.d.ts"],
-  "exclude": ["node_modules"]
+    "strict": true,
+    "verbatimModuleSyntax": true,
+    "importsNotUsedAsValues": null,
+    "preserveValueImports": null
+  }
 }
