--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,11 @@ services:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
-    ports:
-      - "5433:5432"
+    restart: unless-stopped
 
   backend:
     build: ./backend
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8081 --reload
-    volumes:
-      - ./backend:/app
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8081
     ports:
       - "8081:8081"
     environment:
@@ -34,12 +31,10 @@ services:
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
     depends_on:
       - db
+    restart: unless-stopped
 
   frontend:
     build: ./frontend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     ports:
       - "3081:3081"
     environment:
@@ -48,6 +43,7 @@ services:
       - PUBLIC_LIVEKIT_URL=${LIVEKIT_URL}
     depends_on:
       - backend
+    restart: unless-stopped
 
   livekit:
     image: livekit/livekit-server
@@ -60,6 +56,7 @@ services:
     command: --config /livekit.yaml
     environment:
       - LIVEKIT_KEYS=${LIVEKIT_API_KEY}:${LIVEKIT_API_SECRET}
+    restart: unless-stopped
 
 volumes:
   postgres_data:
