--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,11 @@
 # Database
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=your_db_name
-DB_PORT=5432
+POSTGRES_USER=your_db_user
+POSTGRES_PASSWORD=your_db_password
+POSTGRES_DB=your_db_name
+POSTGRES_PORT=5432
 
 # Backend
+BACKEND_PORT=8081
 BACKEND_SECRET_KEY=your_backend_secret_key
 OPENAI_API_KEY=your_openai_api_key
 
@@ -18,6 +19,7 @@ GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 
 # Frontend
+FRONTEND_PORT=3000
 PUBLIC_API_URL=http://backend:8081
 PUBLIC_GOOGLE_CLIENT_ID=your_google_client_id
 PUBLIC_LIVEKIT_URL=your_livekit_url
