--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,4 +15,5 @@ requests>=2.26.0
 pytest>=7.3.1
 pytest-asyncio>=0.21.0
 httpx>=0.24.1
-openai>=0.27.0  # Added OpenAI library
+openai>=0.27.0
+google-cloud-texttospeech>=2.12.0
