--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,16 @@
-fastapi>=0.100
-uvicorn>=0.15.0
-sqlalchemy>=1.4.23
-psycopg2-binary>=2.9.1
-python-dotenv>=0.19.0
-pydantic>=1.8.2,<2.0.0
-python-jose>=3.3.0
-passlib>=1.7.4
-bcrypt>=3.2.0
-websockets>=10.1
-alembic>=1.7.7
-python-multipart>=0.0.5
-PyJWT>=2.3.0
-requests>=2.26.0
-pytest>=7.3.1
-pytest-asyncio>=0.21.0
-httpx>=0.24.1
-openai>=0.27.0
-google-cloud-texttospeech>=2.12.0
-deepgram-sdk>=2.4.0
+fastapi==0.109.0
+uvicorn==0.27.0
+sqlalchemy==2.0.25
+psycopg2-binary==2.9.9
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+pydantic==2.5.3
+pydantic-settings==2.1.0
+alembic==1.13.1
+python-dotenv==1.0.0
+openai==1.6.1
+deepgram-sdk==2.12.0
+websockets==12.0
+email-validator==2.1.0
+requests==2.31.0
