Refactor Tailwind CSS configuration and remove unused plugins

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,12 @@ FROM python:3.11-slim as builder
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev dos2unix
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    netcat-openbsd \
+    dos2unix \
+    libmagic1
 
 # Copy the current directory contents into the container at /app
 COPY requirements.txt .
@@ -19,6 +24,14 @@ FROM python:3.11-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq5 \
+    netcat-openbsd \
+    dos2unix \
+    libmagic1 \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy installed packages from builder
 COPY --from=builder /root/.local /root/.local
 
@@ -28,16 +41,12 @@ COPY . .
 # Make sure scripts in .local are usable:
 ENV PATH=/root/.local/bin:$PATH
 
+# Convert line endings and make the entrypoint script executable
+RUN dos2unix /app/entrypoint.sh \
+    && chmod +x /app/entrypoint.sh
+
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
 
-# Convert line endings and make the entrypoint script executable
-RUN apt-get update && apt-get install -y dos2unix \
-    && dos2unix /app/entrypoint.sh \
-    && chmod +x /app/entrypoint.sh \
-    && apt-get remove -y dos2unix \
-    && apt-get autoremove -y \
-    && rm -rf /var/lib/apt/lists/*
-
 # Run entrypoint script
-CMD ["/bin/sh", "/app/entrypoint.sh"]
+CMD ["/app/entrypoint.sh"]
