--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,21 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic==2.5.3
-pydantic-settings==2.1.0
-alembic==1.13.1
-python-dotenv==1.0.0
-openai==1.6.1
-deepgram-sdk==2.12.0
-websockets==12.0
-email-validator==2.1.0
-requests==2.31.0
+fastapi>=0.109.0
+uvicorn>=0.27.0
+python-multipart>=0.0.6
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+sqlalchemy>=2.0.25
+psycopg2-binary>=2.9.9
+alembic>=1.13.1
+pydantic>=2.5.3
+pydantic-settings>=2.1.0
+python-dotenv>=1.0.0
+deepgram-sdk>=3.0.0
+openai>=1.6.1
+pydub>=0.25.1
+requests>=2.31.0
+python-magic>=0.4.27
+aiofiles>=23.2.1
+asyncpg>=0.29.0
+PyPDF2>=3.0.0
+email-validator>=2.1.0
+pydantic[email]>=2.5.3
