--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,56 @@
-# PostgreSQL Database
-POSTGRES_USER=language_tutor
-POSTGRES_PASSWORD=your_secure_password
-POSTGRES_DB=language_tutor_db
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-
 # Security
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
+# Database
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your-password-here
+POSTGRES_DB=language_tutor
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
 # API Keys
 OPENAI_API_KEY=your-openai-api-key
 DEEPGRAM_API_KEY=your-deepgram-api-key
+ANTHROPIC_API_KEY=your-anthropic-api-key
 
-# Server
+# Server Settings
 HOST=0.0.0.0
 PORT=8000
+LOG_LEVEL=INFO
+
+# CORS
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,http://127.0.0.1:5173
+
+# Feature Flags
+ENABLE_AUDIO=true
+ENABLE_VIDEO=true
+ENABLE_IMAGE=true
+ENABLE_PDF=true
+ENABLE_WEBSOCKET=true
+ENABLE_TTS=true
+
+# LLM Settings
+DEFAULT_MODEL=gpt-4-turbo-preview
+DEFAULT_TEMPERATURE=0.7
+DEFAULT_MAX_TOKENS=1000
+DEFAULT_TOP_P=1.0
+DEFAULT_FREQUENCY_PENALTY=0.0
+DEFAULT_PRESENCE_PENALTY=0.0
+
+# TTS Settings
+DEFAULT_VOICE=alloy
+DEFAULT_SPEECH_MODEL=tts-1
+
+# Session Settings
+SESSION_COOKIE_NAME=auth_session_id
+SESSION_EXPIRE_DAYS=7
+
+# Upload Settings
+MAX_UPLOAD_SIZE=10485760  # 10MB in bytes
+UPLOAD_DIR=uploads
+
+# WebSocket Settings
+WS_HEARTBEAT_INTERVAL=30
