--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,11 +1,8 @@
-# A generic, single database configuration.
-
 [alembic]
-# path to migration scripts
 script_location = alembic
 
 # template used to generate migration files
-# file_template = %%(rev)s_%%(slug)s
+file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d%%(second).2d_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
@@ -21,7 +18,7 @@ prepend_sys_path = .
 
 # max length of characters to apply to the
 # "slug" field
-# truncate_slug_length = 40
+truncate_slug_length = 40
 
 # set to 'true' to run the environment during
 # the 'revision' command, regardless of autogenerate
@@ -40,7 +37,7 @@ prepend_sys_path = .
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. The default within new alembic.ini files is "os", which uses os.pathsep.
-# If this key is omitted entirely, it falls back to the legacy behavior of splitting on spaces and/or commas.
+# If this key is omitted entirely, it falls back to the legacy behavior of splitting on spaces and/or colons.
 # Valid values for version_path_separator are:
 #
 # version_path_separator = :
@@ -48,11 +45,17 @@ prepend_sys_path = .
 # version_path_separator = space
 version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
 
+# set to 'true' to search source files recursively
+# in each "version_locations" directory
+# new in Alembic version 1.10
+# recursive_version_locations = false
+
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:postgres@db:5432/language_tutor
+sqlalchemy.url = postgresql+asyncpg://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s:%(POSTGRES_PORT)s/%(POSTGRES_DB)s
+
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
@@ -64,6 +67,12 @@ sqlalchemy.url = postgresql://postgres:postgres@db:5432/language_tutor
 # black.type = console_scripts
 # black.entrypoint = black
 # black.options = -l 79 REVISION_SCRIPT_FILENAME
+
+# lint with attempts to fix using "ruff" - use the exec runner, execute a binary
+# hooks = ruff
+# ruff.type = exec
+# ruff.executable = %(here)s/.venv/bin/ruff
+# ruff.options = --fix REVISION_SCRIPT_FILENAME
 
 # Logging configuration
 [loggers]
