--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,40 @@
-fastapi>=0.109.0
-uvicorn>=0.27.0
-python-multipart>=0.0.6
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-sqlalchemy>=2.0.25
-psycopg2-binary>=2.9.9
-alembic>=1.13.1
-pydantic>=2.5.3
-pydantic-settings>=2.1.0
-python-dotenv>=1.0.0
-deepgram-sdk>=3.0.0
-openai>=1.6.1
-pydub>=0.25.1
-requests>=2.31.0
-python-magic>=0.4.27
-aiofiles>=23.2.1
-asyncpg>=0.29.0
-PyPDF2>=3.0.0
-email-validator>=2.1.0
-pydantic[email]>=2.5.3
+# FastAPI and server
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+pydantic[email]==2.6.0
+
+# Database
+sqlalchemy==2.0.25
+alembic==1.13.1
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
+
+# WebSocket support
+websockets==12.0
+
+# AI and ML
+openai==1.12.0
+anthropic==0.18.1
+
+# Audio processing
+deepgram-sdk==3.0.0
+
+# Utilities
+python-dotenv==1.0.0
+aiohttp==3.9.0
+aiofiles==23.2.1
+tenacity==8.2.3
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.23.2
+httpx==0.26.0
+
+# Logging
+structlog==24.1.0
+
+# Security
+cryptography==42.0.0
