--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,10 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - DEEPGRAM_API_KEY=${DEEPGRAM_API_KEY}
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+      - CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
     volumes:
       - ./backend:/app
+      - ./backend/uploads:/app/uploads
     depends_on:
       db:
         condition: service_healthy
@@ -49,9 +51,18 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:3000"
+      - "5173:5173"
     environment:
       - VITE_API_URL=http://localhost:8000
+      - VITE_WS_URL=ws://localhost:8000
+      - VITE_ENABLE_AUDIO=true
+      - VITE_ENABLE_VIDEO=true
+      - VITE_ENABLE_IMAGE=true
+      - VITE_ENABLE_PDF=true
+      - VITE_ENABLE_WEBSOCKET=true
+      - VITE_ENABLE_TTS=true
+      - VITE_DEFAULT_LOCALE=en
+      - VITE_SUPPORTED_LOCALES=en,cs,es
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -59,6 +70,7 @@ services:
       - backend
     networks:
       - app-network
+    command: npm run dev -- --host 0.0.0.0
 
 volumes:
   postgres_data:
