--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,30 +1,28 @@
-# Security
+# Security settings
 SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Database
+# Database settings
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your-password-here
+POSTGRES_PASSWORD=postgres
 POSTGRES_DB=language_tutor
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # API Keys
 OPENAI_API_KEY=your-openai-api-key
 DEEPGRAM_API_KEY=your-deepgram-api-key
 ANTHROPIC_API_KEY=your-anthropic-api-key
 
-# Server Settings
+# Server settings
 HOST=0.0.0.0
-PORT=8000
-LOG_LEVEL=INFO
+PORT=8001
 
-# CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,http://127.0.0.1:5173
+# CORS settings
+CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 
-# Feature Flags
+# Feature flags
 ENABLE_AUDIO=true
 ENABLE_VIDEO=true
 ENABLE_IMAGE=true
@@ -32,25 +30,29 @@ ENABLE_PDF=true
 ENABLE_WEBSOCKET=true
 ENABLE_TTS=true
 
-# LLM Settings
-DEFAULT_MODEL=gpt-4-turbo-preview
+# LLM settings
+DEFAULT_MODEL=gpt-4o-mini
 DEFAULT_TEMPERATURE=0.7
 DEFAULT_MAX_TOKENS=1000
 DEFAULT_TOP_P=1.0
 DEFAULT_FREQUENCY_PENALTY=0.0
 DEFAULT_PRESENCE_PENALTY=0.0
 
-# TTS Settings
+# TTS settings
 DEFAULT_VOICE=alloy
 DEFAULT_SPEECH_MODEL=tts-1
 
-# Session Settings
+# Session settings
 SESSION_COOKIE_NAME=auth_session_id
 SESSION_EXPIRE_DAYS=7
 
-# Upload Settings
+# Upload settings
 MAX_UPLOAD_SIZE=10485760  # 10MB in bytes
-UPLOAD_DIR=uploads
 
-# WebSocket Settings
+# WebSocket settings
 WS_HEARTBEAT_INTERVAL=30
+WS_RECONNECT_INTERVAL=5
+WS_MAX_RECONNECT_ATTEMPTS=5
+
+# Logging settings
+LOG_LEVEL=INFO
