Refactor environment variables and agent settings

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,12 +31,19 @@ ENABLE_WEBSOCKET=true
 ENABLE_TTS=true
 
 # LLM settings
+DEFAULT_PROVIDER=openai
 DEFAULT_MODEL=gpt-4o-mini
 DEFAULT_TEMPERATURE=0.7
 DEFAULT_MAX_TOKENS=1000
 DEFAULT_TOP_P=1.0
 DEFAULT_FREQUENCY_PENALTY=0.0
 DEFAULT_PRESENCE_PENALTY=0.0
+
+# Agent settings
+DEFAULT_AGENT_PROVIDER=openai
+DEFAULT_AGENT_MODEL=gpt-4o-mini
+DEFAULT_SYSTEM_PROMPT=You are a helpful assistant
+DEFAULT_AGENT_VOICE=alloy
 
 # TTS settings
 DEFAULT_VOICE=alloy
